tools/clang/test/CodeGenHLSL/quick-test/raytracing_miss_no_payload.hlsl
// RUN: %dxc -T lib_6_3 %s | FileCheck %s

// CHECK: error: shader must include inout payload structure parameter

[shader("miss")]
void miss_no_payload() {}
